# RAF

./: README.md
Code/: pyproject.toml
Code/Data/dataset/: sp500-log_returns-volatility-log_vol.csv
Code/Data/model/: lstm_volatility_model.keras
Code/Data/scaler/: scaler_X2_post24.pkl  scaler_X_pre24.pkl  scaler_y2_post24.pkl  scaler_y_pre24.pkl
Code/Tests/: ARCH.ipynb  Attention.ipynb  DataEngineering.ipynb  Desc-stats.ipynb  RAF.ipynb  RNN.ipynb  Test1.ipynb  model.ipynb  window.ipynb
Docs/: ROADMAP.md  Retrieval Augmented Forecasting Advancement.md  description.md  keywords.md
Docs/Embeddings/: .md
